PO-2360-PO-2361-PDPL-logging-on-GET-draft-accounts
updated tests broken in this change and added extra tests for GET